Updates layout and summary.

--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -68,10 +68,10 @@
     } 
 }); // END min-width 801 block
 
-.u-respond-to-min(1200px, {
+.u-respond-to-min(1024px, {
     .content {
         &__2-1 {
-            .content_main {
+            .content_main__narrow {
                 .grid_column(7, @grid_total-columns, 0, 1);
             }
         }
