--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -6390,6 +6390,38 @@ img {
                 By Patrice Ficklin
             </p>
         </article>
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          .summary
+            .summary_header
+            .summary_text
+            .summary_byline
+    - name: Max-width summary text
+      markup: |
+        <article class="summary">
+            <h1 class="summary_header">
+                Preventing illegal discrimination in auto lending
+            </h1>
+            <p class="summary_text summary_text__max">
+                Every year, millions of American families buy a car –
+                and it will be one of the most significant purchases they make.
+                One key priority for us is protecting consumers from the silent
+                pickpocket of discrimination.
+            </p>
+            <p class="summary_byline">
+                By Patrice Ficklin
+            </p>
+        </article>
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          .summary_text.summary_text__max
+      notes:
+        - "Optionally set a max-width on .summary_text to keep line lengths
+          readable."
   tags:
     - cfgov-summary
 */
@@ -6506,6 +6538,10 @@ a.focus .summary_header {
 .lt-ie9 .summary_text strong,
 .lt-ie9 .summary_text b {
   font-weight: normal !important;
+}
+
+.summary_text__max {
+  max-width: 87.5%;
 }
 
 .summary_byline {
