--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4796,6 +4796,88 @@ img {
   margin-left: 1.875em;
 }
 /* topdoc
+  name: Filters
+  family: cfgov-misc
+  patterns:
+    - name: Default filters example
+      markup: |
+        ...
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          .filters
+      notes:
+        - "..."
+  tags:
+    - cfgov-misc
+*/
+.filters {
+  margin-bottom: 1.875em;
+}
+.filters_header {
+  margin-bottom: 0.9375em;
+}
+.filters_col + .filters_col {
+  margin-top: 1.375em;
+}
+@media only all and (min-width: 37.5em) {
+  .filters_wrapper {
+    display: block;
+    position: relative;
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+  .filters_col {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 50%;
+  }
+  .ie .filters_col {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .filters_col {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+  .filters_col + .filters_col {
+    margin-top: 0;
+  }
+  .filters_actions {
+    text-align: right;
+  }
+}
+@media only all and (min-width: 48em) {
+  .filters_col {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 33.33333333%;
+  }
+  .ie .filters_col {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .filters_col {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
+/* topdoc
   name: Hero
   family: cfgov-misc
   patterns:
@@ -6059,74 +6141,6 @@ a.focus .summary_header {
             .hero_img-container.hero_img-container__large
               .hero_img
 */
-/* topdoc
-  name: Post preview filters
-  family: cfgov-blog-docs
-  patterns:
-    - name: Blog filters
-      markup: |
-        ...
-      notes:
-        - "..."
-  tags:
-    - cfgov-blog-docs
-*/
-.post-preview-filters {
-  margin-bottom: 1.875em;
-}
-.post-preview-filters .expandable_header {
-  margin-bottom: 0.9375em;
-}
-@media only all and (min-width: 37.5em) {
-  .post-preview-filters .filter_wrapper {
-    display: block;
-    position: relative;
-    margin-left: -15px;
-    margin-right: -15px;
-  }
-  .post-preview-filters .filter_col {
-    display: inline-block;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    border: solid transparent;
-    border-width: 0 15px;
-    margin-right: -0.25em;
-    vertical-align: top;
-    width: 50%;
-  }
-  .ie .post-preview-filters .filter_col {
-    margin-right: -0.26em;
-  }
-  .lt-ie8 .post-preview-filters .filter_col {
-    display: inline;
-    margin-right: 0;
-    zoom: 1;
-    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
-  }
-}
-@media only all and (min-width: 48em) {
-  .post-preview-filters .filter_col {
-    display: inline-block;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    border: solid transparent;
-    border-width: 0 15px;
-    margin-right: -0.25em;
-    vertical-align: top;
-    width: 33.33333333%;
-  }
-  .ie .post-preview-filters .filter_col {
-    margin-right: -0.26em;
-  }
-  .lt-ie8 .post-preview-filters .filter_col {
-    display: inline;
-    margin-right: 0;
-    zoom: 1;
-    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
-  }
-}
 /* topdoc
   name: Post previews
   family: cfgov-blog-docs
