Refactoring filters patterns.

--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -182,6 +182,96 @@
 
 
 /* topdoc
+  name: Post filters
+  family: cfgov-blog-docs
+  patterns:
+    - name: Post filters
+      markup: |
+        <div class="expandable expandable__expanded">
+            <div class="expandable_header expandable_header__spaced">
+                <!-- <h5>Blog filtered by</h5>
+                <ul class="list list__horizontal">
+                    <li class="list_item">
+                        <a href="?filter_category=consumer">
+                            Consumer
+                        </a>
+                    </li>
+                </ul> -->
+                <a class="expandable_target btn btn-secondary"
+                   href="#post-filters-form">
+                    Filter posts&nbsp;&nbsp;
+                    <span class="expandable_cue-open">
+                        <span class="cf-icon cf-icon-down"></span>
+                    </span>
+                    <span class="expandable_cue-close">
+                        <span class="cf-icon cf-icon-up"></span>
+                    </span>
+                </a>
+            </div>
+            <div class="expandable_content padded-container">
+                <form class="padded-container_body" id="post-filters-form" method="get">
+                    <div class="filter_cols">
+                        <div class="filter_col filter_col-1-3">
+                            <div class="form-group">
+                                <label class="form-group_header">
+                                    Filter column 1
+                                </label>
+                                <label class="form-group_item form-label">
+                                    <input type="checkbox" name="" value="">
+                                    Checkbox 1
+                                </label>
+                                <label class="form-group_item form-label">
+                                    <input type="checkbox" name="" value="">
+                                    Checkbox 2
+                                </label>
+                            </div>
+                        </div>
+                        <div class="filter_col filter_col-1-3">
+                            <div class="form-group">
+                                <label class="form-group_header">
+                                    Filter column 2
+                                </label>
+                                <input type="text" name="" value="">
+                            </div>
+                        </div>
+                        <div class="filter_col filter_col-1-3">
+                            <div class="form-group">
+                                <label class="form-group_header">
+                                    Filter column 3
+                                </label>
+                                <input type="text" name="" value="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="filter-actions filter-actions__right form-actions">
+                        <input type="reset" value="Reset filters"
+                               class="btn btn-warning btn-link form-actions_item">
+                        <input type="submit" value="Apply filters"
+                               class="btn form-actions_item">
+                    </div>
+                </form>
+            </div>
+        </div>
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          .expandable
+            .expandable_header__spaced
+              .expandable_target.btn.btn-secondary
+            .expandable_content.padded-container
+              .padded-container_body
+                .filter_cols
+                  .filter_col.filter_col-1-3
+                .filter-actions.filter-actions__right
+      notes:
+        - "The filters pattern relies on expandables."
+  tags:
+    - cfgov-blog-docs
+*/
+
+
+/* topdoc
   name: EOF
   eof: true
 */
