--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -213,7 +213,7 @@
                     <div class="filter_cols">
                         <div class="filter_col filter_col-1-3">
                             <div class="form-group">
-                                <label class="form-group_header">
+                                <label class="form-label-header">
                                     Filter column 1
                                 </label>
                                 <label class="form-group_item form-label">
@@ -228,7 +228,7 @@
                         </div>
                         <div class="filter_col filter_col-1-3">
                             <div class="form-group">
-                                <label class="form-group_header">
+                                <label class="form-label-header">
                                     Filter column 2
                                 </label>
                                 <input type="text" name="" value="">
@@ -236,7 +236,7 @@
                         </div>
                         <div class="filter_col filter_col-1-3">
                             <div class="form-group">
-                                <label class="form-group_header">
+                                <label class="form-label-header">
                                     Filter column 3
                                 </label>
                                 <input type="text" name="" value="">
