--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4660,7 +4660,7 @@ img {
     - name: Form element showcase
       markup: |
         <div class="form-group">
-            <label class="form-group_header">Form group header</label>
+            <label class="form-label-header">Form label header</label>
             <label class="form-group_item form-label">
                 <input type="checkbox">
                 Form label
@@ -4671,7 +4671,7 @@ img {
             </label>
         </div>
         <div class="form-group">
-            <label class="form-group_header">Form group header</label>
+            <label class="form-label-header">Form label header</label>
             <select class="form-group_item" name="select">
                 <option value="value1">Value 1</option>
                 <option value="value2">Value 2</option>
@@ -4682,6 +4682,11 @@ img {
             <a href="/blog/" class="btn btn-warning btn-link form-actions_item">Reset filters</a>
             <input type="submit" value="Apply filters" class="btn form-actions_item">
         </div>
+    - name: Form label header
+      markup: |
+        <label class="form-label-header">
+            Form label header
+        </label>
     - name: Form label
       markup: |
         <label class="form-label">
@@ -4699,7 +4704,7 @@ img {
     - name: Form groups
       markup: |
         <div class="form-group">
-            <label class="form-group_header">Form group header</label>
+            <label class="form-label-header">Form label header</label>
             <label class="form-group_item form-label">
                 <input type="checkbox">
                 Form label
@@ -4710,7 +4715,7 @@ img {
             </label>
         </div>
         <div class="form-group">
-            <label class="form-group_header">Form group header</label>
+            <label class="form-label-header">Form label header</label>
             <select class="form-group_item" name="select">
                 <option value="value1">Value 1</option>
                 <option value="value2">Value 2</option>
@@ -4722,7 +4727,6 @@ img {
           Structural cheat sheet:
           -----------------------
           .form-group
-            .form-group_header
             .form-group_item
       notes:
         - "A form group is recommended you need to associate several form
@@ -4768,10 +4772,7 @@ img {
 .form-label input {
   margin-right: 0.375em;
 }
-.form-group + .form-group {
-  margin-top: 1.375em;
-}
-.form-group_header {
+.form-label-header {
   font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
@@ -4783,8 +4784,11 @@ img {
   line-height: 1.57142857;
   margin-bottom: 0.71428571em;
 }
-.lt-ie9 .form-group_header {
+.lt-ie9 .form-label-header {
   font-weight: normal !important;
+}
+.form-group + .form-group {
+  margin-top: 1.375em;
 }
 .form-group_item {
   margin-bottom: 0.375em;
@@ -4804,7 +4808,7 @@ img {
         <div class="filter_cols">
             <div class="filter_col filter_col-1-3">
                 <div class="form-group">
-                    <label class="form-group_header">
+                    <label class="form-label-header">
                         Filter column 1
                     </label>
                     <label class="form-group_item form-label">
@@ -4819,7 +4823,7 @@ img {
             </div>
             <div class="filter_col filter_col-1-3">
                 <div class="form-group">
-                    <label class="form-group_header">
+                    <label class="form-label-header">
                         Filter column 2
                     </label>
                     <input type="text" name="" value="">
@@ -4827,7 +4831,7 @@ img {
             </div>
             <div class="filter_col filter_col-1-3">
                 <div class="form-group">
-                    <label class="form-group_header">
+                    <label class="form-label-header">
                         Filter column 3
                     </label>
                     <input type="text" name="" value="">
@@ -6303,7 +6307,7 @@ a.focus .summary_header {
                     <div class="filter_cols">
                         <div class="filter_col filter_col-1-3">
                             <div class="form-group">
-                                <label class="form-group_header">
+                                <label class="form-label-header">
                                     Filter column 1
                                 </label>
                                 <label class="form-group_item form-label">
@@ -6318,7 +6322,7 @@ a.focus .summary_header {
                         </div>
                         <div class="filter_col filter_col-1-3">
                             <div class="form-group">
-                                <label class="form-group_header">
+                                <label class="form-label-header">
                                     Filter column 2
                                 </label>
                                 <input type="text" name="" value="">
@@ -6326,7 +6330,7 @@ a.focus .summary_header {
                         </div>
                         <div class="filter_col filter_col-1-3">
                             <div class="form-group">
-                                <label class="form-group_header">
+                                <label class="form-label-header">
                                     Filter column 3
                                 </label>
                                 <input type="text" name="" value="">
