--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -5206,7 +5206,7 @@ img {
     - name: Form element showcase
       markup: |
         <div class="form-group">
-            <label class="form-group_header">Form group header</label>
+            <label class="form-label-header">Form label header</label>
             <label class="form-group_item form-label">
                 <input type="checkbox">
                 Form label
@@ -5217,7 +5217,7 @@ img {
             </label>
         </div>
         <div class="form-group">
-            <label class="form-group_header">Form group header</label>
+            <label class="form-label-header">Form label header</label>
             <select class="form-group_item" name="select">
                 <option value="value1">Value 1</option>
                 <option value="value2">Value 2</option>
@@ -5228,6 +5228,11 @@ img {
             <a href="/blog/" class="btn btn-warning btn-link form-actions_item">Reset filters</a>
             <input type="submit" value="Apply filters" class="btn form-actions_item">
         </div>
+    - name: Form label header
+      markup: |
+        <label class="form-label-header">
+            Form label header
+        </label>
     - name: Form label
       markup: |
         <label class="form-label">
@@ -5245,7 +5250,7 @@ img {
     - name: Form groups
       markup: |
         <div class="form-group">
-            <label class="form-group_header">Form group header</label>
+            <label class="form-label-header">Form label header</label>
             <label class="form-group_item form-label">
                 <input type="checkbox">
                 Form label
@@ -5256,7 +5261,7 @@ img {
             </label>
         </div>
         <div class="form-group">
-            <label class="form-group_header">Form group header</label>
+            <label class="form-label-header">Form label header</label>
             <select class="form-group_item" name="select">
                 <option value="value1">Value 1</option>
                 <option value="value2">Value 2</option>
@@ -5268,7 +5273,6 @@ img {
           Structural cheat sheet:
           -----------------------
           .form-group
-            .form-group_header
             .form-group_item
       notes:
         - "A form group is recommended you need to associate several form
@@ -5321,11 +5325,7 @@ img {
   margin-right: 0.375em;
 }
 
-.form-group + .form-group {
-  margin-top: 1.375em;
-}
-
-.form-group_header {
+.form-label-header {
   font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
@@ -5338,8 +5338,12 @@ img {
   margin-bottom: 0.71428571em;
 }
 
-.lt-ie9 .form-group_header {
+.lt-ie9 .form-label-header {
   font-weight: normal !important;
+}
+
+.form-group + .form-group {
+  margin-top: 1.375em;
 }
 
 .form-group_item {
@@ -5363,7 +5367,7 @@ img {
         <div class="filter_cols">
             <div class="filter_col filter_col-1-3">
                 <div class="form-group">
-                    <label class="form-group_header">
+                    <label class="form-label-header">
                         Filter column 1
                     </label>
                     <label class="form-group_item form-label">
@@ -5378,7 +5382,7 @@ img {
             </div>
             <div class="filter_col filter_col-1-3">
                 <div class="form-group">
-                    <label class="form-group_header">
+                    <label class="form-label-header">
                         Filter column 2
                     </label>
                     <input type="text" name="" value="">
@@ -5386,7 +5390,7 @@ img {
             </div>
             <div class="filter_col filter_col-1-3">
                 <div class="form-group">
-                    <label class="form-group_header">
+                    <label class="form-label-header">
                         Filter column 3
                     </label>
                     <input type="text" name="" value="">
@@ -6925,7 +6929,7 @@ a.focus .summary_header {
                     <div class="filter_cols">
                         <div class="filter_col filter_col-1-3">
                             <div class="form-group">
-                                <label class="form-group_header">
+                                <label class="form-label-header">
                                     Filter column 1
                                 </label>
                                 <label class="form-group_item form-label">
@@ -6940,7 +6944,7 @@ a.focus .summary_header {
                         </div>
                         <div class="filter_col filter_col-1-3">
                             <div class="form-group">
-                                <label class="form-group_header">
+                                <label class="form-label-header">
                                     Filter column 2
                                 </label>
                                 <input type="text" name="" value="">
@@ -6948,7 +6952,7 @@ a.focus .summary_header {
                         </div>
                         <div class="filter_col filter_col-1-3">
                             <div class="form-group">
-                                <label class="form-group_header">
+                                <label class="form-label-header">
                                     Filter column 3
                                 </label>
                                 <input type="text" name="" value="">
