--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -11,7 +11,7 @@
     - name: Form element showcase
       markup: |
         <div class="form-group">
-            <label class="form-group_header">Form group header</label>
+            <label class="form-label-header">Form label header</label>
             <label class="form-group_item form-label">
                 <input type="checkbox">
                 Form label
@@ -22,7 +22,7 @@
             </label>
         </div>
         <div class="form-group">
-            <label class="form-group_header">Form group header</label>
+            <label class="form-label-header">Form label header</label>
             <select class="form-group_item" name="select">
                 <option value="value1">Value 1</option>
                 <option value="value2">Value 2</option>
@@ -33,6 +33,11 @@
             <a href="/blog/" class="btn btn-warning btn-link form-actions_item">Reset filters</a>
             <input type="submit" value="Apply filters" class="btn form-actions_item">
         </div>
+    - name: Form label header
+      markup: |
+        <label class="form-label-header">
+            Form label header
+        </label>
     - name: Form label
       markup: |
         <label class="form-label">
@@ -50,7 +55,7 @@
     - name: Form groups
       markup: |
         <div class="form-group">
-            <label class="form-group_header">Form group header</label>
+            <label class="form-label-header">Form label header</label>
             <label class="form-group_item form-label">
                 <input type="checkbox">
                 Form label
@@ -61,7 +66,7 @@
             </label>
         </div>
         <div class="form-group">
-            <label class="form-group_header">Form group header</label>
+            <label class="form-label-header">Form label header</label>
             <select class="form-group_item" name="select">
                 <option value="value1">Value 1</option>
                 <option value="value2">Value 2</option>
@@ -73,7 +78,6 @@
           Structural cheat sheet:
           -----------------------
           .form-group
-            .form-group_header
             .form-group_item
       notes:
         - "A form group is recommended you need to associate several form
@@ -100,13 +104,13 @@
     }
 }
 
-.form-group + .form-group {
-    margin-top: unit(22px / @base-font-size-px, em);
-}
-
-.form-group_header {
+.form-label-header {
     .h5();
     margin-bottom: unit(10px / @font-size, em);
+}
+
+.form-group + .form-group {
+    margin-top: unit(22px / @base-font-size-px, em);
 }
 
 .form-group_item {
@@ -134,7 +138,7 @@
         <div class="filter_cols">
             <div class="filter_col filter_col-1-3">
                 <div class="form-group">
-                    <label class="form-group_header">
+                    <label class="form-label-header">
                         Filter column 1
                     </label>
                     <label class="form-group_item form-label">
@@ -149,7 +153,7 @@
             </div>
             <div class="filter_col filter_col-1-3">
                 <div class="form-group">
-                    <label class="form-group_header">
+                    <label class="form-label-header">
                         Filter column 2
                     </label>
                     <input type="text" name="" value="">
@@ -157,7 +161,7 @@
             </div>
             <div class="filter_col filter_col-1-3">
                 <div class="form-group">
-                    <label class="form-group_header">
+                    <label class="form-label-header">
                         Filter column 3
                     </label>
                     <input type="text" name="" value="">
