Refactors filters pattern.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4857,9 +4857,6 @@ img {
   tags:
     - cfgov-misc
 */
-.filter_col {
-  margin-bottom: 1em;
-}
 @media only all and (min-width: 37.5em) {
   .filter_cols {
     display: block;
@@ -4867,6 +4864,11 @@ img {
     margin-left: -15px;
     margin-right: -15px;
   }
+}
+.filter_col {
+  margin-bottom: 1em;
+}
+@media only all and (min-width: 37.5em) {
   .filter_col-1-3 {
     display: inline-block;
     -webkit-box-sizing: border-box;
@@ -4913,13 +4915,13 @@ img {
 .filter-actions {
   margin-top: 1.875em;
 }
+.filter-actions__right {
+  text-align: right;
+}
 @media only all and (min-width: 37.5em) {
   .filter-actions {
     margin-top: 0.875em;
   }
-}
-.filter-actions__right {
-  text-align: right;
 }
 .expandable {
   margin-bottom: 1.875em;
