--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4803,7 +4803,46 @@ img {
   name: Filters
   family: cfgov-misc
   patterns:
-    - name: Basic filter patterns
+    - name: Barebones filter pattern
+      markup: |
+        <div class="filter_cols">
+            <div class="filter_col filter_col-1-3">
+                Filter column 1
+            </div>
+            <div class="filter_col filter_col-1-3">
+                Filter column 2
+            </div>
+            <div class="filter_col filter_col-1-3">
+                Filter column 3
+            </div>
+        </div>
+        <div class="filter_actions">
+            <input type="submit" value="Filter action 1"
+                   class="btn">
+        </div>
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          .filter
+            .filter_cols
+              .filter_col.filter_col-1-3
+            .filter_actions
+    - name: Filter columns
+      codenotes:
+        - .filter_col
+        - .filter_col-1-3
+      notes:
+        - ".filter_col-1-3 elements are stacked for small screens. When the
+          viewport reaches 600px they transform into columns with one half the
+          width of the container. When the viewport reaches 768px their width
+          updates to one third of the container."
+    - name: Right aligned filter actions modifier
+      codenotes:
+        - .filter_actions__right
+      notes:
+        - "Right aligns the text within .filter_actions."
+    - name: Real-world filter pattern
       markup: |
         <div class="filter_cols">
             <div class="filter_col filter_col-1-3">
@@ -4838,22 +4877,12 @@ img {
                 </div>
             </div>
         </div>
-        <div class="filter-actions filter-actions__right form-actions">
+        <div class="filter_actions filter_actions__right form-actions">
             <input type="reset" value="Reset filters"
                    class="btn btn-warning btn-link form-actions_item">
             <input type="submit" value="Apply filters"
                    class="btn form-actions_item">
         </div>
-      codenotes:
-        - |
-          Structural cheat sheet:
-          -----------------------
-          .filter
-            .filter_cols
-              .filter_col.filter_col-1-3
-            .filter-actions.filter-actions__right
-      notes:
-        - "The filters pattern relies on expandables."
   tags:
     - cfgov-misc
 */
@@ -4912,14 +4941,14 @@ img {
     behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
-.filter-actions {
+.filter_actions {
   margin-top: 1.875em;
 }
-.filter-actions__right {
+.filter_actions__right {
   text-align: right;
 }
 @media only all and (min-width: 37.5em) {
-  .filter-actions {
+  .filter_actions {
     margin-top: 0.875em;
   }
 }
