--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -133,7 +133,46 @@
   name: Filters
   family: cfgov-misc
   patterns:
-    - name: Basic filter patterns
+    - name: Barebones filter pattern
+      markup: |
+        <div class="filter_cols">
+            <div class="filter_col filter_col-1-3">
+                Filter column 1
+            </div>
+            <div class="filter_col filter_col-1-3">
+                Filter column 2
+            </div>
+            <div class="filter_col filter_col-1-3">
+                Filter column 3
+            </div>
+        </div>
+        <div class="filter_actions">
+            <input type="submit" value="Filter action 1"
+                   class="btn">
+        </div>
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          .filter
+            .filter_cols
+              .filter_col.filter_col-1-3
+            .filter_actions
+    - name: Filter columns
+      codenotes:
+        - .filter_col
+        - .filter_col-1-3
+      notes:
+        - ".filter_col-1-3 elements are stacked for small screens. When the
+          viewport reaches 600px they transform into columns with one half the
+          width of the container. When the viewport reaches 768px their width
+          updates to one third of the container."
+    - name: Right aligned filter actions modifier
+      codenotes:
+        - .filter_actions__right
+      notes:
+        - "Right aligns the text within .filter_actions."
+    - name: Real-world filter pattern
       markup: |
         <div class="filter_cols">
             <div class="filter_col filter_col-1-3">
@@ -168,22 +207,12 @@
                 </div>
             </div>
         </div>
-        <div class="filter-actions filter-actions__right form-actions">
+        <div class="filter_actions filter_actions__right form-actions">
             <input type="reset" value="Reset filters"
                    class="btn btn-warning btn-link form-actions_item">
             <input type="submit" value="Apply filters"
                    class="btn form-actions_item">
         </div>
-      codenotes:
-        - |
-          Structural cheat sheet:
-          -----------------------
-          .filter
-            .filter_cols
-              .filter_col.filter_col-1-3
-            .filter-actions.filter-actions__right
-      notes:
-        - "The filters pattern relies on expandables."
   tags:
     - cfgov-misc
 */
@@ -209,7 +238,7 @@
     });
 }
 
-.filter-actions {
+.filter_actions {
     margin-top: unit(30px / @base-font-size-px, em);
 
     &__right {
